--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="Для%20авы.jpg" alt="Token Image">
+        <img src="avatar.jpg" alt="Token Image">
         <h1>Soon you'll see it all</h1>
         <div class="timer" id="timer">15:00</div>
     </div>
