--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             height: 100vh;
             background-color: #000;
             color: #fff;
-            font-family: Arial, sans-serif;
+            font-family: Courier New, sans-serif;
         }
         .container {
             text-align: center;
