--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background-color: #000;
             color: #fff;
             font-family: Courier New, sans-serif;
+            overflow: hidden;
         }
         .container {
             text-align: center;
