--- a/index.html
+++ b/index.html
@@ -49,25 +49,24 @@
     function startTimer(duration, display) {
         let timer = duration;
 
-        // Проверяем, есть ли сохранённое время
+        // Проверяем сохранённое время
         const savedTime = localStorage.getItem('remainingTime');
-        if (savedTime && savedTime > 0) {
-            timer = parseInt(savedTime, 10); // Преобразуем из строки в число
+        if (savedTime !== null && parseInt(savedTime, 10) > 0) {
+            timer = parseInt(savedTime, 10); // Используем сохранённое время
         }
 
         const interval = setInterval(() => {
             const minutes = Math.floor(timer / 60);
             const seconds = timer % 60;
 
-            // Форматируем и отображаем время
+            // Обновляем текст таймера
             display.textContent = `${String(minutes).padStart(2, '0')}:${String(seconds).padStart(2, '0')}`;
 
-            timer--;
+            timer--; // Уменьшаем время
             localStorage.setItem('remainingTime', timer); // Сохраняем оставшееся время
 
-            // Если время закончилось
             if (timer < 0) {
-                clearInterval(interval);
+                clearInterval(interval); // Останавливаем таймер
                 localStorage.removeItem('remainingTime'); // Удаляем сохранённое время
                 display.textContent = "Time's up!";
             }
@@ -77,6 +76,10 @@
     window.onload = () => {
         const sixtyMinutes = 60 * 60; // 60 минут
         const display = document.getElementById('timer');
+
+        if (!localStorage.getItem('remainingTime')) {
+            localStorage.setItem('remainingTime', sixtyMinutes); // Сохраняем стартовое время
+        }
 
         startTimer(sixtyMinutes, display);
     };
